# plutonomy

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  README.md  accept.sh  cabal.1efbb276e.haskell-ci  cabal.1efbb276e.project  cabal.4710dff2e.haskell-ci  cabal.4710dff2e.project  cabal.f680ac697.haskell-ci  cabal.f680ac697.project  cabal.ghc9.project  cabal.haskell-ci  cabal.project  haskell-ci-regenerate.sh  plutonomy.cabal
.github/workflows/: haskell-ci.1efbb276e.yml  haskell-ci.4710dff2e.yml  haskell-ci.f680ac697.yml  haskell-ci.yml
fixtures-1/: multisig-aggressive.txt  multisig-optimized.txt  multisig-original.txt
fixtures-2/: multisig-aggressive.txt  multisig-optimized.txt  multisig-original.txt
fixtures-3/: multisig-aggressive.txt  multisig-optimized.txt  multisig-original.txt
fixtures-4/: multisig-aggressive.txt  multisig-optimized.txt  multisig-original.txt
src/: Plutonomy.hs
src-subst/: Subst.hs
src-subst/Subst/: Var.hs
src/Plutonomy/: Builtins.hs  Constant.hs  Conversion.hs  Hereditary.hs  Known.hs  Lift.hs  Linear.hs  MissingH.hs  Name.hs  Optimize.hs  Orphans.hs  PlutusExtras.hs  Pretty.hs  Raw.hs  Scripts.hs  Test.hs  TypedScripts.hs  UPLC.hs
src/Plutonomy/Hereditary/: Rewrite.hs  Transform.hs
src/Plutonomy/Raw/: Lets.hs  Rewrite.hs  Transform.hs
tests/: MultiSig.hs  plutonomy-tests.hs
